[metadata]
name =
author = Lin Zhu
author_email = lin.zhu@maxiv.lu.se
license =
description =
long_description_content_type=text/x-rst
long_description =

url = https://github.com/pydata/xarray
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.17
    pandas >= 1.0
    setuptools >= 40.4  # For pkg_resources
    typing-extensions >= 3.10  # Backported type hints

[options.extras_require]
io =
    netCDF4
    h5netcdf
    scipy
    pydap
    zarr
    fsspec
    cftime
    rasterio
    cfgrib
    pooch
    ## Scitools packages & dependencies (e.g: cartopy, cf-units) can be hard to install
    # scitools-iris

accel =
    scipy
    bottleneck
    numbagg

parallel =
    dask[complete]

viz =
    matplotlib
    seaborn
    nc-time-axis
    ## Cartopy requires 3rd party libraries and only provides source distributions
    ## See: https://github.com/SciTools/cartopy/issues/805
    # cartopy

complete =
    %(io)s
    %(accel)s
    %(parallel)s
    %(viz)s

docs =
    %(complete)s
    sphinx-autosummary-accessors
    sphinx_rtd_theme
    ipython
    ipykernel
    jupyter-client
    nbsphinx
    scanpydoc

[options.package_data]
xarray =
    py.typed
    tests/data/*
    static/css/*
    static/html/*

[tool:pytest]
python_files = test_*.py
testpaths = xarray/tests properties
# Fixed upstream in https://github.com/pydata/bottleneck/pull/199
filterwarnings =
    ignore:Using a non-tuple sequence for multidimensional indexing is deprecated:FutureWarning
markers =
    flaky: flaky tests
    network: tests requiring a network connection
    slow: slow tests

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
per-file-ignores =
    xarray/tests/*.py:F401,F811
exclude=
    .eggs
    doc

[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = xarray

[mypy]
exclude = properties|asv_bench|doc
files = xarray/**/*.py
show_error_codes = True

# Most of the numerical computing stack doesn't have type annotations yet.
[mypy-affine.*]
ignore_missing_imports = True
[mypy-bottleneck.*]
ignore_missing_imports = True
[mypy-cartopy.*]
ignore_missing_imports = True
[mypy-cdms2.*]
ignore_missing_imports = True
[mypy-cf_units.*]
ignore_missing_imports = True
[mypy-cfgrib.*]
ignore_missing_imports = True
[mypy-cftime.*]
ignore_missing_imports = True
[mypy-cupy.*]
ignore_missing_imports = True
[mypy-dask.*]
ignore_missing_imports = True
[mypy-distributed.*]
ignore_missing_imports = True
[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-h5netcdf.*]
ignore_missing_imports = True
[mypy-h5py.*]
ignore_missing_imports = True
[mypy-iris.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-Nio.*]
ignore_missing_imports = True
[mypy-nc_time_axis.*]
ignore_missing_imports = True
[mypy-numbagg.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-netCDF4.*]
ignore_missing_imports = True
[mypy-netcdftime.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-pooch.*]
ignore_missing_imports = True
[mypy-PseudoNetCDF.*]
ignore_missing_imports = True
[mypy-pydap.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-rasterio.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-seaborn.*]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True
[mypy-sparse.*]
ignore_missing_imports = True
[mypy-toolz.*]
ignore_missing_imports = True
[mypy-zarr.*]
ignore_missing_imports = True
# version spanning code is hard to type annotate (and most of this module will
# be going away soon anyways)
[mypy-xarray.core.pycompat]
ignore_errors = True

[aliases]
test = pytest

[pytest-watch]
nobeep = True
